--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -26,6 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding-bottom: 10vh;
   align-items: center;
   justify-content: center;
 }
