--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -31,7 +31,7 @@ body {
   justify-content: center;
 }
 
-.lb-loading {
+.loading {
   font-size: $jumbotron-font-size;
   font-weight: 700;
 
@@ -63,7 +63,7 @@ body {
   }
 }
 
-.lb-body-wrapper {
+.body-wrapper {
   max-width: 100%;
   opacity: 0;
   transition: opacity 2s ease;
